--- a/public/style.css
+++ b/public/style.css
@@ -1,9 +1,10 @@
 @font-face {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Arial', 'Helvetica', sans-serif;
 }
 
 body {
-	background: #2E231C;
-	color: #EB0D32;
-	font-family: Arial;
+	background: #002244;
+	color: #69BE28;
+	font-family: 'Roboto', 'Arial';
 }
+
