--- a/views/layout.erb
+++ b/views/layout.erb
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Sinatra Hangman Example</title>
-    <link rel="stylesheet" type="text/css" href="./public/style.css">
+    <link rel="stylesheet" type="text/css" href="/style.css"/>
   </head>
   <body>
     <div class="container">
